# lader-cad-review-engine

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  parse_dwg_files.py  test_contract_direct.py  test_contract_parse.py  test_llm_direct.py  test_odaconverter.py  test_odaconverter_v2.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/llm/: __init__.py  llm_service.py
backend/app/models/: parse_result.py
backend/app/parsers/: __init__.py  contract_parser.py  dxf_parser.py
backend/app/rules/: __init__.py  engine.py
backend/app/services/: __init__.py  contract_dwg_validator.py  database_gateway.py  dwg_translator.py  file_registry.py  history_storage.py  legend_counter.py  legend_template_service.py  parse_service.py  report_service.py  result_merger.py  review_service.py
backend/app/tasks/: __init__.py  celery_app.py  review_tasks.py
backend/app/utils/: __init__.py  dwg_converter.py
backend/dwg_review_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_add_file_metadata.py
backend/scripts/: import_json_to_db.py
backend/tests/: conftest.py
backend/tests/api/: __init__.py  test_parse_api.py  test_review_api.py  test_tasks_api.py  test_validation_api.py
backend/tests/parsers/: test_dxf_parser.py
backend/tests/rules/: test_engine.py
(+158 files in other folders)
